--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -147,40 +147,7 @@
       </md-tab>
 
       <md-tab>
-        <div class="customer-view__transactions">
-          <table class="highlight">
-            <thead>
-              <tr>
-                <th data-field="id">ID</th>
-                <th data-field="data">Date</th>
-                <th data-field="amount">Amount</th>
-                <th data-field="processorResponse">Processor Response</th>
-                <th></th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <tr *ngFor="let transaction of transactions">
-                <td [routerLink]="['/transactions', transaction.id]">{{transaction.id}}</td>
-                <td [routerLink]="['/transactions', transaction.id]">{{transaction.createdAt.format('MM/DD/YYYY')}}</td>
-                <td [routerLink]="['/transactions', transaction.id]">{{transaction.amount}}</td>
-                <td [routerLink]="['/transactions', transaction.id]">{{transaction.processorResponse.message}}</td>
-                <td>
-                  <table-actions
-                    [service]="service">
-                  </table-actions>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-
-          <table-pagination
-            [limit]="5"
-            [paginationValues]="['5', '10', '15', '20']"
-            [previousDisabled]="true"
-            [nextDisabled]="true">
-          </table-pagination>
-        </div>
+        <customer-transactions *ngIf="entityId" [id]="entityId"></customer-transactions>
       </md-tab>
 
       <md-tab>
