--- a/src/app/pages/notifications-page/notifications.component.html
+++ b/src/app/pages/notifications-page/notifications.component.html
@@ -1,7 +1,81 @@
-<div *ngFor="let notification of entities">
-  <span>{{notification.user}}</span>
-  <span>{{notification.type}}</span>
-  <span>{{notification.action}}</span>
-  <span>{{notification.message}}</span>
-  <span>{{notification.createdAt.format()}}</span>
+<div class="notifications"
+     infiniteScroll
+     [infiniteScrollDistance]="2"
+     [infiniteScrollThrottle]="300"
+     [scrollWindow]="false"
+     (scrolled)="onScroll()">
+
+  <div class="notifications__topnav">
+    <span>Notifications</span>
+    <md-icon class="notifications__topnav__options" [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
+
+    <md-menu #actionsMenu="mdMenu" x-position="before">
+    </md-menu>
+  </div>
+
+  <div class="notifications__content">
+
+    <div *ngIf="today && today.length > 0">
+      <div class="notifications-list__content__title">Today</div>
+
+      <div *ngFor="let notification of today">
+        <div class="notifications__content__notification" (click)="readNotification(notification)">
+          <div class="notifications__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
+          <div class="notifications__content__notification__message">{{notification.message}}</div>
+          <div class="notifications__content__notification__date">
+            <span>{{notification.createdAt.format('HH:m')}}</span>
+            <div *ngIf="!notification.readAt"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div *ngIf="last7 && last7.length > 0">
+      <div class="notifications-list__content__title">Last 7 days</div>
+
+      <div *ngFor="let notification of last7">
+        <div class="notifications__content__notification" (click)="readNotification(notification)">
+          <div class="notifications__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
+          <div class="notifications__content__notification__message">{{notification.message}}</div>
+          <div class="notifications__content__notification__date">
+            <span>{{notification.createdAt.format('MMMM D')}}</span>
+            <div *ngIf="!notification.readAt"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="month && month.length > 0">
+      <div class="notifications-list__content__title">Last Month</div>
+
+      <div *ngFor="let notification of month">
+        <div class="notifications__content__notification" (click)="readNotification(notification)">
+          <div class="notifications__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
+          <div class="notifications__content__notification__message">{{notification.message}}</div>
+          <div class="notifications__content__notification__date">
+            <span>{{notification.createdAt.format('MMMM D')}}</span>
+            <div *ngIf="!notification.readAt"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="other && other.length > 0">
+      <div class="notifications-list__content__title">Last Month</div>
+
+      <div *ngFor="let notification of other">
+        <div class="notifications__content__notification" (click)="readNotification(notification)">
+          <div class="notifications__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
+          <div class="notifications__content__notification__message">{{notification.message}}</div>
+          <div class="notifications__content__notification__date">
+            <span>{{notification.createdAt.format('MMMM D')}}</span>
+            <div *ngIf="!notification.readAt"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <md-spinner *ngIf="notificationsService.requestInProgress$ | async"></md-spinner>
+  </div>
 </div>
