--- a/src/assets/scss/_notifications.scss
+++ b/src/assets/scss/_notifications.scss
@@ -98,3 +98,97 @@
     }
   }
 }
+
+notifications {
+  display: block;
+  padding: 30px;
+}
+
+.notifications {
+  height: calc(100vh - 132px);
+  max-width: 700px;
+  overflow: auto;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+  background: white;
+
+  &__topnav {
+
+    padding: 20px 10px;
+
+    span {
+      vertical-align: middle;
+      margin-left: 10px;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    md-icon {
+      vertical-align: middle;
+      cursor: pointer;
+    }
+
+    &__options {
+      float: right;
+    }
+  }
+
+  &__content {
+    height: calc(100% - 115px);
+
+    &__title {
+      padding: 10px 20px;
+      background: rgba(0, 0, 0, 0.12);
+      font-size: 12px;
+      font-weight: 500;
+      color: rgba(0, 0, 0, 0.4);
+    }
+
+    &__notification {
+      display: flex;
+      padding: 10px 20px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+      cursor: default;
+
+      &:hover {
+        background-color: #EBF2FE;
+      }
+
+      &__image {
+        width: 65px;
+
+        img {
+          vertical-align: middle;
+        }
+      }
+
+      &__message {
+        width: 200px;
+        padding: 5px 0;
+        font-size: 14px;
+      }
+
+      &__date {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: space-between;
+        margin-left: auto;
+        width: 65px;
+        font-size: 10px;
+        color: rgba(0, 0, 0, 0.4);
+
+        div {
+          margin-top: 15px;
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          background: #FE7274;
+        }
+      }
+    }
+
+    md-spinner {
+      margin: 30px auto;
+    }
+  }
+}
