--- a/src/app/pages/access-keys-page/access-keys.component.html
+++ b/src/app/pages/access-keys-page/access-keys.component.html
@@ -18,7 +18,9 @@
         [service]="service"
         (viewClicked)="viewEntity(entity.id)"
         (copyClicked)="copyEntity(entity.id)"
-        (exportClicked)="exportEntity(entity.id)">
+        (exportClicked)="exportEntity(entity.id)"
+        (editClicked)="editEntity(entity.id)"
+        (deleteClicked)="deleteEntity(entity.id)">
       </table-actions>
     </td>
   </tr>
