--- a/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -32,7 +32,9 @@
                 [service]="service"
                 (viewClicked)="viewEntity(entity.id)"
                 (copyClicked)="copyEntity(entity.id)"
-                (exportClicked)="exportEntity(entity.id)">
+                (exportClicked)="exportEntity(entity.id)"
+                (editClicked)="editEntity(entity.id)"
+                (deleteClicked)="deleteEntity(entity.id)">
               </table-actions>
             </td>
           </tr>
