--- a/src/app/pages/product-schedule-page/product-schedules.component.html
+++ b/src/app/pages/product-schedule-page/product-schedules.component.html
@@ -26,7 +26,9 @@
               [service]="service"
               (viewClicked)="viewEntity(entity.id)"
               (copyClicked)="copyEntity(entity.id)"
-              (exportClicked)="exportEntity(entity.id)">
+              (exportClicked)="exportEntity(entity.id)"
+              (editClicked)="editEntity(entity.id)"
+              (deleteClicked)="deleteEntity(entity.id)">
             </table-actions>
           </td>
         </tr>
