--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -165,6 +165,21 @@ $border-color: rgba(0, 0, 0, 0.2);
         display: block;
       }
     }
+
+    &__reset {
+      display: inline-block;
+      margin: 40px auto 0;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+      border-radius: 3px;
+      width: 150px;
+      padding: 8px;
+      background: #039BE5;
+      font-size: 12px;
+      font-weight: 500;
+      text-align: center;
+      color: white;
+      cursor: pointer;
+    }
   }
 
 
