--- a/src/app/pages/products-page/products.component.html
+++ b/src/app/pages/products-page/products.component.html
@@ -8,7 +8,10 @@
     (deleteEntity)="deleteEntity($event)">
   </product>
 
-  <div class="entity-index__title">Products</div>
+  <div class="entity-index__title">
+    Products
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -27,7 +30,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of entities">
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
           <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.sku}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.ship}}</td>
