--- a/src/app/pages/campaigns-page/campaigns.component.html
+++ b/src/app/pages/campaigns-page/campaigns.component.html
@@ -1,7 +1,10 @@
 <div #indexR class="entity-index">
   <campaign *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></campaign>
 
-  <div class="entity-index__title">Campaigns</div>
+  <div class="entity-index__title">
+    Campaigns
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -19,8 +22,8 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let entity of entities">
-            <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
+          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
             <td (click)="viewEntity(entity.id)">{{entity.loadBalancer.merchantProviderConfigurations.length}}</td>
             <td (click)="viewEntity(entity.id)">{{entity.productSchedules.length}}</td>
             <td>
