--- a/src/app/pages/credit-cards-page/credit-cards.component.html
+++ b/src/app/pages/credit-cards-page/credit-cards.component.html
@@ -8,7 +8,10 @@
     (deleteEntity)="deleteEntity($event)">
   </credit-card>
 
-  <div class="entity-index__title">Credit Cards</div>
+  <div class="entity-index__title">
+    Credit Cards
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -28,7 +31,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of entities">
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
           <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.expiration}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.address.country}}</td>
