--- a/src/app/pages/customers-page/customers.component.html
+++ b/src/app/pages/customers-page/customers.component.html
@@ -8,7 +8,10 @@
     (deleteEntity)="deleteEntity($event)">
   </customer>
 
-  <div class="entity-index__title">Customers</div>
+  <div class="entity-index__title">
+    Customers
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -27,7 +30,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of entities">
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
           <td (click)="viewEntity(entity.id)">{{entity.firstName}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.lastName}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.address.state}}</td>
