--- a/src/app/pages/emails-page/emails.component.html
+++ b/src/app/pages/emails-page/emails.component.html
@@ -1,7 +1,10 @@
 <div #indexR class="entity-index">
   <email *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></email>
 
-  <div class="entity-index__title">Emails</div>
+  <div class="entity-index__title">
+    Emails
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -19,7 +22,7 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let email of entities">
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
             <td (click)="viewEntity(entity.id)">{{email.name}}</td>
             <td (click)="viewEntity(entity.id)">{{email.subject}}</td>
             <td (click)="viewEntity(entity.id)">{{email.type}}</td>
