--- a/src/app/pages/load-balancers-page/load-balancers.component.html
+++ b/src/app/pages/load-balancers-page/load-balancers.component.html
@@ -1,7 +1,10 @@
 <div #indexR class="entity-index">
   <load-balancer *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></load-balancer>
 
-  <div class="entity-index__title">Load Balancers</div>
+  <div class="entity-index__title">
+    Load Balancers
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -18,7 +21,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of entities">
+         <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
           <td (click)="viewEntity(entity.id)">{{entity.id}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.merchantProviderConfigurations.length}}</td>
           <td>
