--- a/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -1,7 +1,10 @@
 <div #indexR class="entity-index">
   <merchant-provider *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></merchant-provider>
 
-  <div class="entity-index__title">Merchant Providers</div>
+  <div class="entity-index__title">
+    Merchant Providers
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -21,7 +24,7 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let entity of entities">
+          <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
             <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
             <td (click)="viewEntity(entity.id)">{{entity.username}}</td>
             <td (click)="viewEntity(entity.id)">{{entity.password}}</td>
