--- a/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,7 +1,10 @@
 <div #indexR class="entity-index">
   <smtp-provider *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></smtp-provider>
 
-  <div class="entity-index__title">SMTP Providers</div>
+  <div class="entity-index__title">
+    SMTP Providers
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -21,7 +24,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of entities">
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
           <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.ipAddress}}</td>
