--- a/src/app/pages/transactions-page/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions.component.html
@@ -1,7 +1,10 @@
 <div #indexR class="entity-index">
   <transaction *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></transaction>
 
-  <div class="entity-index__title">Transactions</div>
+  <div class="entity-index__title">
+    Transactions
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -20,7 +23,7 @@
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of entities">
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
           <td (click)="viewEntity(entity.id)">{{entity.id}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.createdAt.format('MM/DD/YYYY')}}</td>
           <td (click)="viewEntity(entity.id)">{{entity.amount}}</td>
