--- a/src/app/pages/users-page/users.component.html
+++ b/src/app/pages/users-page/users.component.html
@@ -7,7 +7,11 @@
     (close)="hideEntityDetails()"
     (deleteEntity)="deleteEntity($event)">
   </user>
-  <div class="entity-index__title">Users</div>
+
+  <div class="entity-index__title">
+    Users
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
 
@@ -26,7 +30,7 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let entity of entities; let i = index;">
+          <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
             <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
             <td (click)="viewEntity(entity.id)">{{entity.email}}</td>
             <td (click)="viewEntity(entity.id)">{{entity.active}}</td>
