--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -4,9 +4,18 @@ $title-color: #979797;
   position: relative;
 
   &__title {
+    position: relative;
     padding: 25px 70px;
     font-size: 22px;
     color: $title-color;
+
+    md-input {
+      position: absolute;
+      top: 14px;
+      right: 70px;
+      width: 160px;
+      font-size: 14px;
+    }
   }
 
   &__add {
