--- a/src/app/pages/users-page/users.component.html
+++ b/src/app/pages/users-page/users.component.html
@@ -21,20 +21,19 @@
       <table class="entity-index__table highlight">
         <thead class="entity-index__table__header">
           <tr>
-            <th data-field="name"><span mdTooltip="Name">Name <md-icon>keyboard_arrow_down</md-icon></span></th>
-            <th data-field="email">Email <md-icon>keyboard_arrow_down</md-icon></th>
-            <th data-field="active">Active <md-icon>keyboard_arrow_down</md-icon></th>
-            <th data-field="active">Terms and Conditions <md-icon>keyboard_arrow_down</md-icon></th>
+            <ng-container *ngFor="let params of columnParams">
+              <th (click)="setSortedColumnParams(params)">
+                {{params.label}}
+                <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+              </th>
+            </ng-container>
             <th></th>
           </tr>
         </thead>
 
         <tbody>
-          <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-            <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
-            <td (click)="viewEntity(entity.id)">{{entity.email}}</td>
-            <td (click)="viewEntity(entity.id)">{{entity.active}}</td>
-            <td (click)="viewEntity(entity.id)">{{entity.termsAndConditions}}</td>
+          <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
+            <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
             <td>
               <table-actions
                 [service]="service"
