--- a/src/app/pages/customers-page/customers.component.html
+++ b/src/app/pages/customers-page/customers.component.html
@@ -21,20 +21,19 @@
       <table class="entity-index__table highlight">
         <thead class="entity-index__table__header">
         <tr>
-          <th data-field="firstName">First Name <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="lastName">Last Name <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="state">State <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="city">City <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th>Actions</th>
+          <ng-container *ngFor="let params of columnParams">
+            <th (click)="setSortedColumnParams(params)">
+              {{params.label}}
+              <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+            </th>
+          </ng-container>
+          <th></th>
         </tr>
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-          <td (click)="viewEntity(entity.id)">{{entity.firstName}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.lastName}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.address.state}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.address.city}}</td>
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
+          <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
           <td>
             <table-actions
               [service]="service"
