--- a/src/app/pages/emails-page/emails.component.html
+++ b/src/app/pages/emails-page/emails.component.html
@@ -13,20 +13,19 @@
       <table class="entity-index__table highlight">
         <thead class="entity-index__table__header">
           <tr>
-            <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
-            <th data-field="subject">Subject <md-icon>keyboard_arrow_down</md-icon> </th>
-            <th data-field="type">Type <md-icon>keyboard_arrow_down</md-icon> </th>
-            <th data-field="smtpProviderName">SMTP Provider Name <md-icon>keyboard_arrow_down</md-icon> </th>
-            <th>Actions</th>
+            <ng-container *ngFor="let params of columnParams">
+              <th (click)="setSortedColumnParams(params)">
+                {{params.label}}
+                <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+              </th>
+            </ng-container>
+            <th></th>
           </tr>
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-            <td (click)="viewEntity(entity.id)">{{email.name}}</td>
-            <td (click)="viewEntity(entity.id)">{{email.subject}}</td>
-            <td (click)="viewEntity(entity.id)">{{email.type}}</td>
-            <td (click)="viewEntity(entity.id)">{{email.smtpProvider.name}}</td>
+          <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
+            <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
             <td>
               <table-actions
                 [service]="service"
