--- a/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
@@ -21,22 +21,19 @@
       <table class="entity-index__table highlight">
         <thead class="entity-index__table__header">
         <tr>
-          <th data-field="name">Name</th>
-          <th data-field="username">Username</th>
-          <th data-field="password">Password</th>
-          <th data-field="endpoint">Endpoint</th>
-          <th data-field="provider">Provider</th>
-          <th>Actions</th>
+          <ng-container *ngFor="let params of columnParams">
+            <th (click)="setSortedColumnParams(params)">
+              {{params.label}}
+              <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+            </th>
+          </ng-container>
+          <th></th>
         </tr>
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.username}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.password}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.endpoint}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.provider}}</td>
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
+          <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
           <td>
             <table-actions
               [service]="service"
