--- a/src/app/pages/products-page/products.component.html
+++ b/src/app/pages/products-page/products.component.html
@@ -21,20 +21,19 @@
       <table class="entity-index__table highlight">
         <thead class="entity-index__table__header">
         <tr>
-          <th data-field="Name">Product Name <md-icon>keyboard_arrow_down</md-icon></th>
-          <th data-field="Sku">SKU <md-icon>keyboard_arrow_down</md-icon></th>
-          <th data-field="Ship">Ship <md-icon>keyboard_arrow_down</md-icon></th>
-          <th data-field="Shipping Delay">Shipping Delay <md-icon>keyboard_arrow_down</md-icon></th>
-          <th>Actions</th>
+          <ng-container *ngFor="let params of columnParams">
+            <th (click)="setSortedColumnParams(params)">
+              {{params.label}}
+              <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+            </th>
+          </ng-container>
+          <th></th>
         </tr>
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.sku}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.ship}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.shippingDelay}}</td>
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
+          <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
           <td>
             <table-actions
               [service]="service"
