--- a/src/app/pages/transactions-page/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions.component.html
@@ -14,20 +14,19 @@
       <table class="entity-index__table highlight">
         <thead class="entity-index__table__header">
           <tr>
-            <th data-field="id">ID <md-icon>keyboard_arrow_down</md-icon></th>
-            <th data-field="data">Date <md-icon>keyboard_arrow_down</md-icon></th>
-            <th data-field="amount">Amount <md-icon>keyboard_arrow_down</md-icon></th>
-            <th data-field="processorResponse">Processor Response <md-icon>keyboard_arrow_down</md-icon></th>
+            <ng-container *ngFor="let params of columnParams">
+              <th (click)="setSortedColumnParams(params)">
+                {{params.label}}
+                <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+              </th>
+            </ng-container>
             <th></th>
           </tr>
         </thead>
 
         <tbody>
-        <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-          <td (click)="viewEntity(entity.id)">{{entity.id}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.createdAt.format('MM/DD/YYYY')}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.amount}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.processorResponse.message}}</td>
+        <tr *ngFor="let entity of (entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder)">
+          <td (click)="viewEntity(entity.id)" *ngFor="let param of columnParams">{{param.mappingFunction(entity)}}</td>
           <td>
             <table-actions
               [service]="service"
