--- a/src/app/navigation/notifications-quick/notifications-quick.component.html
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.html
@@ -9,65 +9,23 @@
   </div>
 
   <div class="notifications-list__content">
-    <div *ngIf="today && today.length > 0">
-      <div class="notifications-list__content__title">Today</div>
+    <div *ngFor="let notificationsByDate of notsByDate">
 
-      <div *ngFor="let notification of today">
-        <div class="notifications-list__content__notification" (click)="readNotification(notification)">
-          <div class="notifications-list__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
-          <div class="notifications-list__content__notification__message">{{notification.message}}</div>
-          <div class="notifications-list__content__notification__date">
-            <span>{{notification.createdAt.format('MMMM D')}}</span>
-            <div *ngIf="!notification.readAt"></div>
+      <div *ngIf="notificationsByDate.nots.length > 0">
+        <div class="notifications-list__content__title">{{notificationsByDate.label}}</div>
+
+        <div *ngFor="let notification of notificationsByDate.nots">
+          <div class="notifications-list__content__notification" (click)="readNotification(notification)">
+            <div class="notifications-list__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
+            <div class="notifications-list__content__notification__message">{{notification.message}}</div>
+            <div class="notifications-list__content__notification__date">
+              <span>{{notification.createdAt.format('MMMM D')}}</span>
+              <div *ngIf="!notification.readAt"></div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-
-    <div *ngIf="last7 && last7.length > 0">
-      <div class="notifications-list__content__title">Last 7 days</div>
-
-      <div *ngFor="let notification of last7">
-        <div class="notifications-list__content__notification" (click)="readNotification(notification)">
-          <div class="notifications-list__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
-          <div class="notifications-list__content__notification__message">{{notification.message}}</div>
-          <div class="notifications-list__content__notification__date">
-            <span>{{notification.createdAt.format('MMMM D')}}</span>
-            <div *ngIf="!notification.readAt"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div *ngIf="month && month.length > 0">
-      <div class="notifications-list__content__title">Last Month</div>
-
-      <div *ngFor="let notification of month">
-        <div class="notifications-list__content__notification" (click)="readNotification(notification)">
-          <div class="notifications-list__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
-          <div class="notifications-list__content__notification__message">{{notification.message}}</div>
-          <div class="notifications-list__content__notification__date">
-            <span>{{notification.createdAt.format('MMMM D')}}</span>
-            <div *ngIf="!notification.readAt"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div *ngIf="other && other.length > 0">
-      <div class="notifications-list__content__title">Last Month</div>
-
-      <div *ngFor="let notification of other">
-        <div class="notifications-list__content__notification" (click)="readNotification(notification)">
-          <div class="notifications-list__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
-          <div class="notifications-list__content__notification__message">{{notification.message}}</div>
-          <div class="notifications-list__content__notification__date">
-            <span>{{notification.createdAt.format('MMMM D')}}</span>
-            <div *ngIf="!notification.readAt"></div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
