--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -202,6 +202,12 @@ $card-title-color: #5B9BE1;
         th {
           padding: 30px 5px;
           font-weight: 400;
+          cursor: pointer;
+
+          md-icon {
+            position: absolute;
+            top: 26px;
+          }
         }
       }
 
